--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -18,6 +18,9 @@
   %strong Code :
   = @project.code
 %p
+  %strong Etat :
+  = @project.etat
+%p
   %strong Description :
   = @project.description
 
