--- a/app/views/entities/new.html.haml
+++ b/app/views/entities/new.html.haml
@@ -1,4 +1,11 @@
 - model_class = Entity
 .page-header
   %h1 Nouvelle Entité
-= render :partial => "form"
+-# = render :partial => "form"
+= simple_form_for @entity, :html => { :class => 'form-horizontal' } do |f|
+  = f.input :name, label: "Nom"
+  = f.association :manager, collection: Collaborator.managers, prompt: "Sélectionner le manager de l'entité"
+  = f.input :description
+  .form-actions
+    = f.submit "Créer Entité", class: 'btn btn-primary'
+    = link_to "Annuler", entities_path, class: 'btn'
