--- a/app/views/projects/new.html.haml
+++ b/app/views/projects/new.html.haml
@@ -1,4 +1,16 @@
 - model_class = Project
 .page-header
   %h1 Nouveau Projet
-= render :partial => "form"
+-# = render :partial => "form"
+= simple_form_for @project, :html => { :class => 'form-horizontal' } do |f|
+  = f.input       :name, label: "Nom"
+  = f.association :domain, input_html: {disabled: "disabled"}
+  = f.association :domain, as: :hidden
+  = f.association :chef, collection: Collaborator.consultants, prompt: "Sélectionner un collaborateur"
+  = f.association :maitrise_ouvrage, label: "Maître d'ouvrage", collection: Collaborator.consultants, prompt: "Sélectionner un collaborateur"
+  = f.input       :code
+  = f.input       :etat, as: :hidden
+  = f.input       :description
+  .form-actions
+    = f.submit "Créer Projet", class: 'btn btn-primary'
+    = link_to "Annuler", @project.domain, class: 'btn'
