--- a/app/views/collaborator_mailer/envoyer_rapport_hebdomadaire.html.haml
+++ b/app/views/collaborator_mailer/envoyer_rapport_hebdomadaire.html.haml
@@ -11,7 +11,7 @@
       Voici le reporting hebdomadaire de ton entité :
       = @entity.name
 
-    %table
+    %table{border: "1px"}
       %caption
         %h2 Les reconduits
       %thead
@@ -28,7 +28,7 @@
             %td= reconduit.project.name
             %td= reconduit.consultant.commentaire
 
-    %table
+    %table{border: "1px"}
       %caption
         %h2 Les nouveaux
       %thead
@@ -45,7 +45,7 @@
             %td= nouveau.project.name
             %td= nouveau.consultant.commentaire
 
-    %table
+    %table{border: "1px"}
       %caption
         %h2 Changements de projets
       %thead
@@ -64,7 +64,7 @@
             %td= Proposal.where("consultant_id = ? and project_id != ? and etat = ? and date >= ? and date <= ?", proposal.consultant_id, proposal.project_id, "arrivée", Time.now.beginning_of_week, Time.now.end_of_week).first.project.name
             %td= proposal.consultant.commentaire
 
-    %table
+    %table{border: "1px"}
       %caption
         %h2 Les retours
       %thead
@@ -81,7 +81,7 @@
             %td= proposal.project.name
             %td= proposal.consultant.commentaire
 
-    %table
+    %table{border: "1px"}
       %caption
         %h2 Les départs
       %thead
@@ -98,7 +98,7 @@
             %td= proposal.project.name
             %td= proposal.consultant.commentaire
 
-    %table
+    %table{border: "1px"}
       %caption
         %h2 Les attentes
       %thead
@@ -117,7 +117,7 @@
             %td= Proposal.where(consultant_id: proposal.consultant_id, etat: "arrivée").last.try(:project).try(:name)
             %td= proposal.consultant.commentaire
 
-    %table
+    %table{border: "1px"}
       %caption
         %h2 Consultants à éligibilité conditionnelle
       %thead
