--- a/app/views/entities/show.html.haml
+++ b/app/views/entities/show.html.haml
@@ -67,6 +67,7 @@
       %th Nom
       %th Rôle
       %th Eligibilité
+      %th Etat
       %th Entité Aramis
       %th Actions
   %tbody
@@ -76,6 +77,7 @@
         %td= collaborator.nom
         %td= collaborator.role
         %td= collaborator.eligibilite
+        %td= collaborator.etat
         %td= collaborator.aramis_entity.name
         %td
           = link_to "Gérer", collaborator, :class => 'btn btn-mini'
