--- a/app/views/collaborators/_form.html.haml
+++ b/app/views/collaborators/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for @collaborator, html:  { class:  'form-horizontal' } do |f|
+= simple_form_for @collaborator, url: "/gestion/collaborators/#{@collaborator.id}", html:  { class:  'form-horizontal' } do |f|
   = f.input :nom
   = f.input :prenom, label: "Prénom"
   = f.input :id_karma
