--- a/app/views/collaborators/new.html.haml
+++ b/app/views/collaborators/new.html.haml
@@ -2,7 +2,7 @@
 .page-header
   %h1 Nouveau Collaborateur
 =# render :partial => "form"
-= simple_form_for @collaborator, html: { class: 'form-horizontal' } do |f|
+= simple_form_for @collaborator, url: collaborators_path, html: { class: 'form-horizontal' } do |f|
   = f.association :entity, input_html: {disabled: "disabled"}
   = f.association :entity, as: :hidden
   = f.input :nom
@@ -11,6 +11,7 @@
   = f.input :profil
   = f.input :role, as: :hidden
   = f.input :email, placeholder: "prénom.nom@devoteam.com"
+  = f.input :password, as: :hidden
   -# = f.input :eligibilite, collection: ["éligible", "non-éligible"], prompt: "Sélenner l'éligibilité du consultant"
   = f.input :etat, as: :hidden
   -# = f.input :statut
