--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -31,29 +31,38 @@
             %ul.nav.pull-right
               %li= link_to "Accueil", root_path
               %li= link_to "Aide", aide_path
-              %li= link_to "Se connecter", "/path3"
+              - if collaborator_signed_in?
+                %li= link_to "Se déconnecter", destroy_collaborator_session_path, method: :delete
+              - else
+                %li= link_to "Se connecter", new_collaborator_session_path
 
     .container-fluid
 
       .row-fluid
-        .span3
-          .well.sidebar-nav
-            %ul.nav.nav-list
-              %li.nav-header Les actions
-              %li= link_to "Gérer les propositions", proposals_path
-              %li= link_to "Gérer les entités", entities_path
-              %li= link_to "Gérer les codes projets", project_codes_path
-              %li=# link_to "Gérer les entités aramis", aramis_entities_path
-              %li= link_to "Gérer les domaines", domains_path
-              %li=# link_to "Gérer les collaborateurs", collaborators_path
-              %li=# link_to "Gérer les projets", projects_path
-              %li= link_to "Gérer les affectations", affectations_path
-              %li= link_to "Confirmer les arrivées", confirmations_path
-              %li= link_to "Publipostage", envoyer_codes_proposals_path, data: {confirm: "Êtes-vous sûr de vouloir envoyer les codes Aramis ?"}
-              %li= link_to "Reporting", envoyer_reportings_entities_path, data: {confirm: "Êtes-vous sûr de vouloir envoyer les reportings de la semaine ?"}
-        .span9
-          = bootstrap_flash
-          = yield
+        - if collaborator_signed_in?
+          .span3
+            .well.sidebar-nav
+              %ul.nav.nav-list
+                %li.nav-header Les actions
+                %li= link_to "Gérer les propositions", proposals_path
+                %li= link_to "Gérer les entités", entities_path
+                %li= link_to "Gérer les codes projets", project_codes_path
+                %li=# link_to "Gérer les entités aramis", aramis_entities_path
+                %li= link_to "Gérer les domaines", domains_path
+                %li=# link_to "Gérer les collaborateurs", collaborators_path
+                %li=# link_to "Gérer les projets", projects_path
+                %li= link_to "Gérer les affectations", affectations_path
+                %li= link_to "Confirmer les arrivées", confirmations_path
+                %li= link_to "Publipostage", envoyer_codes_proposals_path, data: {confirm: "Êtes-vous sûr de vouloir envoyer les codes Aramis ?"}
+                %li= link_to "Reporting", envoyer_reportings_entities_path, data: {confirm: "Êtes-vous sûr de vouloir envoyer les reportings de la semaine ?"}
+        - if collaborator_signed_in?
+          .span9
+            = bootstrap_flash
+            = yield
+        - else
+          .span12
+            = bootstrap_flash
+            = yield
     
       %footer
         %p &copy; Devoteam 2014
