--- a/app/views/proposals/index.html.haml
+++ b/app/views/proposals/index.html.haml
@@ -41,7 +41,7 @@
 
 - @propositions.each do |proposal|
   - dialog_body = capture do
-    = simple_form_for proposal.consultant, :html => { class: 'form-horizontal' } do |f|
+    = simple_form_for proposal.consultant, url: "/gestion/collaborators/#{proposal.consultant.id}", :html => { class: 'form-horizontal' } do |f|
       = f.input :nom
       = f.input :prenom, label: "Prénom"
       = f.input :id_karma
