--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -1,8 +1,8 @@
 = simple_form_for @project, :html => { :class => 'form-horizontal' } do |f|
   = f.input       :name, label: "Nom"
   = f.association :domain, label: "Domamine", prompt: "Sélectionner le domaine"
-  = f.association :chef, collection: Collaborator.consultants, prompt: "Sélectionner un collaborateur"
-  = f.association :maitrise_ouvrage, label: "Maître d'ouvrage", collection: Collaborator.consultants, prompt: "Sélectionner un collaborateur"
+  = f.association :chef, collection: Collaborator.consultants.actifs, prompt: "Sélectionner un collaborateur"
+  = f.association :maitrise_ouvrage, label: "Maître d'ouvrage", collection: Collaborator.consultants.actifs, prompt: "Sélectionner un collaborateur"
   = f.input       :code
   = f.input       :etat, collection: ["activé", "désactivé"]
   = f.input       :description
