--- a/app/views/proposals/_form.html.haml
+++ b/app/views/proposals/_form.html.haml
@@ -1,10 +1,10 @@
 = simple_form_for @proposal, :html => { :class => 'form-horizontal' } do |f|
   =# f.association :list, as: :hidden
   = f.association :entity
-  = f.association :consultant, collection: @proposal.consultant.entity.collaborators.consultants.valides, prompt: "Sélectionner le consultant"
+  = f.association :consultant, collection: @proposal.consultant.entity.collaborators.consultants.actifs, prompt: "Sélectionner le consultant"
   = f.input :date, label: "Date d'arrivée", as: :string, input_html: {class: "datepicker"}
   = f.input :nbre_jour, label: "Nombre de jours"
-  = f.input :etat, collection: ["disponible", "reservée", "validée", "arrivée"]
+  = f.input :etat, collection: ["créée", "disponible", "reservée", "validée", "arrivée"]
   = f.association :project
   .form-actions
     = f.button :submit, :class => 'btn-primary'
