--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -3,7 +3,11 @@
   %h2 Ceci est la page d'accueil de l'application. Veuillez vous enregistrer pour commencer à utiliser l'application.
   - if collaborator_signed_in?
     = link_to "Se déconnecter", destroy_collaborator_session_path, class: "btn btn-large btn-info", method: :delete
-    %p= current_collaborator.name
+    %p
+      = current_collaborator.name
+      (
+      = current_collaborator.role
+      )
   - else
     = link_to "Se connecter", new_collaborator_session_path, class: "btn btn-large btn-info"
 
