--- a/app/views/aramis_entities/show.html.haml
+++ b/app/views/aramis_entities/show.html.haml
@@ -13,8 +13,10 @@
 
 .form-actions
   = link_to "Retour", @aramis_entity.project_code, class:  'btn'
-  = link_to "Modifier", edit_aramis_entity_path(@aramis_entity), class:  'btn'
-  = link_to "Supprimer", aramis_entity_path(@aramis_entity), method: "delete", data:  { confirm: "Êtes-vous sûr ?" }, class: 'btn btn-danger'
+  - if can? :update, @aramis_entity
+    = link_to "Modifier", edit_aramis_entity_path(@aramis_entity), class:  'btn'
+  - if can? :destroy, @aramis_entity
+    = link_to "Supprimer", aramis_entity_path(@aramis_entity), method: "delete", data:  { confirm: "Êtes-vous sûr ?" }, class: 'btn btn-danger'
 
 %h2 Liste des Collaborateurs
 %table.table.table-striped
