--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -44,17 +44,25 @@
             .well.sidebar-nav
               %ul.nav.nav-list
                 %li.nav-header Les actions
-                %li= link_to "Gérer les propositions", proposals_path
-                %li= link_to "Gérer les entités", entities_path
-                %li= link_to "Gérer les codes projets", project_codes_path
+                - if can? :index, Proposal
+                  %li= link_to "Gérer les propositions", proposals_path
+                - if can? :read, Entity
+                  %li= link_to "Gérer les entités", entities_path
+                - if can? :read, ProjectCode
+                  %li= link_to "Gérer les codes projets", project_codes_path
                 %li=# link_to "Gérer les entités aramis", aramis_entities_path
-                %li= link_to "Gérer les domaines", domains_path
+                - if can? :read, Domain
+                  %li= link_to "Gérer les domaines", domains_path
                 %li=# link_to "Gérer les collaborateurs", collaborators_path
                 %li=# link_to "Gérer les projets", projects_path
-                %li= link_to "Gérer les affectations", affectations_path
-                %li= link_to "Confirmer les arrivées", confirmations_path
-                %li= link_to "Publipostage", envoyer_codes_proposals_path, data: {confirm: "Êtes-vous sûr de vouloir envoyer les codes Aramis ?"}
-                %li= link_to "Reporting", envoyer_reportings_entities_path, data: {confirm: "Êtes-vous sûr de vouloir envoyer les reportings de la semaine ?"}
+                - if can? :gestion_affectations, Proposal
+                  %li= link_to "Gérer les affectations", affectations_path
+                - if can? :confirmation_affectations, Proposal
+                  %li= link_to "Confirmer les arrivées", confirmations_path
+                - if can? :envoyer_codes_imputation, :all
+                  %li= link_to "Publipostage", envoyer_codes_proposals_path, data: {confirm: "Êtes-vous sûr de vouloir envoyer les codes Aramis ?"}
+                - if can? :envoyer_rapport_hebdomadaire, :all
+                  %li= link_to "Reporting", envoyer_reportings_entities_path, data: {confirm: "Êtes-vous sûr de vouloir envoyer les reportings de la semaine ?"}
         - if collaborator_signed_in?
           .span9
             = bootstrap_flash
