--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -26,5 +26,5 @@
 
 .form-actions
   = link_to "Retour", @project.domain, class: 'btn'
-  = link_to "Modifier", edit_project_path(@project), class: 'btn'
-  =# link_to "Supprimer", project_path(@project), method: "delete", data: { confirm: "Êtes-vous sûr ?" }, class: 'btn btn-danger'
+  - if can? :update, @project
+    = link_to "Modifier", edit_project_path(@project), class: 'btn'
