--- a/app/views/proposals/confirmation_affectations.html.haml
+++ b/app/views/proposals/confirmation_affectations.html.haml
@@ -17,10 +17,29 @@
         %tr
           %td= link_to proposal.consultant.name, "#modal"+proposal.consultant_id.to_s, "data-toggle" => 'modal'
           %td= proposal.project.name
-          %td= link_to "Arriver", arriver_proposal_path(proposal), :class => 'btn btn-mini fonction'
+          - if can? :arriver, proposal
+            %td= link_to "Arriver", arriver_proposal_path(proposal), class: 'btn btn-mini fonction'
 
 - @propositions_validees.each do |proposal|
   - dialog_body = capture do
+    %p
+      %strong Id Karma:
+      = proposal.consultant.id_karma
+    %p
+      %strong Profil :
+      = proposal.consultant.profil
+    %p
+      %strong Rôle :
+      = proposal.consultant.role
+    %p
+      %strong Email :
+      = proposal.consultant.email
+    %p
+      %strong Eligibilité :
+      = proposal.consultant.eligibilite
+    %p
+      %strong Etat :
+      = proposal.consultant.etat
     %p
       %strong Niveau de diplôme :
       = proposal.consultant.niv_diplome
@@ -30,8 +49,17 @@
     %p
       %strong Entité :
       = proposal.consultant.entity.name
+    %p
+      %strong Entité Aramis :
+      = proposal.consultant.aramis_entity.name
+    %p
+      %strong Manager :
+      = proposal.consultant.entity.manager.name
+    %p
+      %strong Commentaire :
+      = proposal.consultant.commentaire
   = modal_dialog id: "modal"+proposal.consultant_id.to_s,
-  header: { title: proposal.consultant.name },
+  header: { show_close: true, dismiss: 'modal', title: proposal.consultant.name },
   body: dialog_body,
   footer: content_tag(:button, 'Fermer', class: 'btn', "data-dismiss" => "modal")
 
@@ -54,6 +82,24 @@
 - @propositions_arrivees.each do |proposal|
   - dialog_body = capture do
     %p
+      %strong Id Karma:
+      = proposal.consultant.id_karma
+    %p
+      %strong Profil :
+      = proposal.consultant.profil
+    %p
+      %strong Rôle :
+      = proposal.consultant.role
+    %p
+      %strong Email :
+      = proposal.consultant.email
+    %p
+      %strong Eligibilité :
+      = proposal.consultant.eligibilite
+    %p
+      %strong Etat :
+      = proposal.consultant.etat
+    %p
       %strong Niveau de diplôme :
       = proposal.consultant.niv_diplome
     %p
@@ -62,7 +108,16 @@
     %p
       %strong Entité :
       = proposal.consultant.entity.name
+    %p
+      %strong Entité Aramis :
+      = proposal.consultant.aramis_entity.name
+    %p
+      %strong Manager :
+      = proposal.consultant.entity.manager.name
+    %p
+      %strong Commentaire :
+      = proposal.consultant.commentaire
   = modal_dialog id: "modal"+proposal.consultant_id.to_s,
-  header: { title: proposal.consultant.name },
+  header: { show_close: true, dismiss: 'modal', title: proposal.consultant.name },
   body: dialog_body,
   footer: content_tag(:button, 'Fermer', class: 'btn', "data-dismiss" => "modal")
