Envoi de mails aux responsables de domaines après publication

--- a/app/views/collaborator_mailer/envoyer_codes_imputation.html.haml
+++ b/app/views/collaborator_mailer/envoyer_codes_imputation.html.haml
@@ -8,7 +8,7 @@
       = @consultant.prenom
       ,
     %p
-      Voici les codes ARAMIS à utiliser pour saisir ton CRA DRI dans ARAMIS :
+      Voici les codes à utiliser pour saisir ton CRA DRI dans ARAMIS :
       %br
       %strong
         Code Projet :
