--- a/app/views/proposals/index.html.haml
+++ b/app/views/proposals/index.html.haml
@@ -2,7 +2,7 @@
 .page-header
   %h1 
     Propositions
-    = Time.now.next_week.strftime("S%W %Y")
+    = Time.now.next_week.next_week.strftime("S%W %Y")
 
 %table.table.table-striped.table-condensed.minimiser.well
   %thead
