--- a/app/views/proposals/confirmation_affectations.html.haml
+++ b/app/views/proposals/confirmation_affectations.html.haml
@@ -1,7 +1,7 @@
 .page-header
   %h1 
     Confirmation des affectations
-    = Time.now.next_week.strftime("S%W %Y")
+    = Time.now.next_week.next_week.strftime("S%W %Y")
 
 .table-responsive.minimiser
   %table.table.table-striped.table-condensed.well
