--- a/app/views/proposals/gestion_affectations.html.haml
+++ b/app/views/proposals/gestion_affectations.html.haml
@@ -2,6 +2,8 @@
   %h1 
     Gestion des affectations
     = Time.now.next_week.next_week.strftime("S%W %Y")
+    = Time.now.next_week.strftime(", Date : %d/%m/%Y")
+
 .table-responsive.minimiser
   %table.table.table-striped.table-condensed.well
     %caption
